# RGLGazeboPlugin

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  package.xml
RGLGuiPlugin/: CMakeLists.txt  RGLGuiPlugin.cc  RGLGuiPlugin.hh  RGLGuiPlugin.qml  RGLGuiPlugin.qrc  RGLGuiPlugin_TEST.cc
RGLServerPlugin/: CMakeLists.txt
RGLServerPlugin/include/: LidarPatternLoader.hh  RGLServerPlugin.hh  RGLServerPluginInstance.hh  RGLServerPluginManager.hh  Utils.hh
RGLServerPlugin/include/macros/: visibility.h
RGLServerPlugin/include/rgl/api/: core.h
RGLServerPlugin/lidar_patterns/: HesaiPandarQT64.mat3x4f
RGLServerPlugin/src/: Lidar.cc  LidarPatternLoader.cc  Mesh.cc  RGLServerPlugin.cc  RGLServerPluginInstance.cc  RGLServerPluginManager.cc  Scene.cc  Utils.cc
RGLServerPlugin/test_world/materials/scripts/: model.material
RGLVisualize/: CMakeLists.txt  NOTICE  RGLVisualize.cc  RGLVisualize.hh  RGLVisualize.qml  RGLVisualize.qrc
include/: RGLGazeboPlugin.hh
include/server/: ServerPlugin.hh
lidar_patterns/: HesaiPandar40P.mat3x4f  OusterOS1_64.mat3x4f  VelodyneVLP16.mat3x4f  VelodyneVLP32C.mat3x4f
src/: Lidar.cc  Mesh.cc  RGLGazeboPlugin.cc  Utils.cc
src/server/: Lidar.cc  Mesh.cc  RGLServerPlugin.cc  ServerPlugin.cc  Utils.cc
test_world/: actor_world.sdf  build.sh  full_build.sh  garden_gpu_lidar.sdf  garden_rgl.sdf  logo.sdf  model.config  model.sdf  prius_world_RGL.sdf  prius_world_built_in_gpu_lidar.sdf  rgl_playground.sdf  sonoma_with_rgl.sdf  test_world.sdf
test_world/meshes/: minecartengine.dae
