<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>RGLGazeboPlugin</name>
  <version>0.2.0</version>
  <description>RGL Gazebo Plugin</description>
  <maintainer email="mateusz.szczygielski@robotec.ai">Mateusz Szczygielski</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gz_cmake_vendor</depend>
  <depend>gz_gui_vendor</depend>
  <depend>gz_msgs_vendor</depend>
  <depend>gz_plugin_vendor</depend>
  <depend>gz_rendering_vendor</depend>
  <depend>gz_sim_vendor</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
