<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>RGLGazeboPlugin</name>
  <version>0.2.0</version>
  <description>RGL Gazebo Plugin</description>
  <maintainer email="mateusz.szczygielski@robotec.ai">Mateusz Szczygielski</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ignition-gazebo6</depend>
  <depend>ignition-gui6</depend>
  <depend>ignition-msgs8</depend>
  <depend>ignition-plugin</depend>
  <depend>ignition-rendering6</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
